# mongoengine-migrate

./: .gitignore  .travis.yml  CHANGELOG.md  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py  tox.ini
docs/: _config.yml  actions.md  cli.md  index.md  installing.md  migrations.md  navigation.md  overview.md
docs/_layouts/: default.html
githooks/: pre-push.sh  setup_hooks.sh
install/: setup_hooks.sh
mongoengine_migrate/: cli.py  exceptions.py  flags.py  graph.py  history_mock.py  loader.py  migration.py  migration_template.tpl  mongo.py  query_tracer.py  schema.py  updater.py  utils.py
mongoengine_migrate/action/: base.py
mongoengine_migrate/actions/: __init__.py  base.py  collection.py  diff.py  document.py  embedded.py  factory.py  fields.py  index.py  run_python.py
mongoengine_migrate/command/: base.py
mongoengine_migrate/fields/: __init__.py  base.py  common.py  converters.py  convertion_matrix.py  registry.py
mongoengine_migrate/fields/converters/: __init__.py  common.py  (+1 more)
tests/: _test_migration.py  conftest.py  test_converters.py  test_migration.py  test_utils.py
tests/action/: _test_base_action.py  test_actions_rank.py  test_alter_document.py  test_alter_embedded.py  test_alter_field.py  test_alter_index.py  test_base_action.py  test_create_document.py  test_create_embedded.py  test_create_field.py  test_create_index.py  test_drop_document.py  test_drop_embedded.py  test_drop_field.py  test_drop_index.py  test_rename_document.py  test_rename_embedded.py  test_rename_field.py  test_run_python.py
tests/fixtures/: schema1.py
